add image to index.html and giving some styles

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Updating CSS</title>
 </head>
 <body>
-    
+    <h1>Updating Image with CSS</h1>
+    <form>
+        <div class="baseC">Base Color:</div>
+        <input type="color" name="selectColor" value="#FFFF33">
+    </form>
+    <div class="image">
+        <img 
+            src="https://images.unsplash.com/photo-1464820453369-31d2c0b651af?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2000&q=80" 
+            alt="flower" 
+        />
+    </div>
 </body>
 </html>
