--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
 </head>
 <body>
     <h1>Updating Image with CSS</h1>
-    <form>
-        <div class="baseC">Base Color:</div>
-        <input type="color" name="selectColor" value="#FFFF33">
-    </form>
+    <div class="style">
+        <form class="spacing">
+            <div class="text">Spacing:</div>
+            <input type="range" min="1" max="100" value="0">
+        </form>
+        <form class="blur">
+            <div class="text">Blur:</div>
+            <input type="range" min="1" max="100" value="0">
+        </form>
+        <form class="color">
+            <div class="text">Base Color:</div>
+            <input type="color" name="selectColor" value="#FFFF33">
+        </form>
+    </div>
     <div class="image">
         <img 
             src="https://images.unsplash.com/photo-1464820453369-31d2c0b651af?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2000&q=80" 
