--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 <body>
     <h1>Updating Image with CSS</h1>
     <div class="style">
-        <form class="spacing">
+        <form id="spacing">
             <div class="text">Spacing:</div>
             <input type="range" min="1" max="100" value="0">
         </form>
-        <form class="blur">
+        <form id="blur">
             <div class="text">Blur:</div>
-            <input type="range" min="1" max="100" value="0">
+            <input id="blurred" type="range" min="1" max="5" value="0">
         </form>
-        <form class="color">
+        <form id="color">
             <div class="text">Base Color:</div>
-            <input type="color" name="selectColor" value="#FFFF33">
+            <input id="colors" type="color" name="selectColor" value="#FFFF33">
         </form>
     </div>
-    <div class="image">
+    <div id="image">
         <img 
             src="https://images.unsplash.com/photo-1464820453369-31d2c0b651af?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2000&q=80" 
             alt="flower" 
