add filter:blur and select:color to image through JavaScript EvenListener

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </form>
         <form id="blur">
             <div class="text">Blur:</div>
-            <input id="blurred" type="range" min="1" max="5" value="0">
+            <input id="blurred" type="range" min="0" max="5" value="0">
         </form>
         <form id="color">
             <div class="text">Base Color:</div>
@@ -24,7 +24,8 @@
         </form>
     </div>
     <div id="image">
-        <img 
+        <img
+            id="flowerImage" 
             src="https://images.unsplash.com/photo-1464820453369-31d2c0b651af?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2000&q=80" 
             alt="flower" 
         />
